@@ -1,5 +1,8 @@
 2013-01-30  Christopher Schmidt  <christopher@ch.ristopher.com>
 
+	* gnus-int.el (gnus-backend-trace-elapsed): New variable.
+	(gnus-backend-trace): Honour gnus-backend-trace.
+
 	* mml.el (mml-insert-part): Insert closing tag.
 
 	* mm-decode.el (mm-save-part): Handle invalid read-file-name results.
